# novita-areana

./: .gitignore  AGENT.md  CLAUDE.md  PLAN.md  PROGRESS.md  env.example  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/agent/: route.ts
app/api/chat/: route.ts
app/api/sandbox/: route.ts
app/api/test-model/: route.ts
app/playground/: page.tsx
app/recording/: page.tsx
components/app/: agent-todo-list.tsx  app-card.tsx  arena-battle-modal.tsx  footer.tsx  header.tsx  model-badge.tsx  model-info-card.tsx  model-settings-modal.tsx  recording-indicator.tsx  share-modal.tsx  step-indicator.tsx  thinking-process.tsx  todo-list.tsx
components/playground/: markdown-renderer.tsx  streaming-code-display.tsx
docs/design-system/: navigation.md  typography.md
docs/prd/: 00-产品概览.md  01-技术规范.md  02-页面规范.md  03-运营与设计.md  README.md  产品需求文档.md
docs/tech/: 00-技术选型.md  01-使用流程.md  02-接口设计.md  03-数据库设计.md
docs/third-partys/vercel/: deploy.md
hooks/: use-agent.ts  use-screen-recorder.ts
lib/: agent-workflow.ts  devtools-model.ts  prompt.ts  schema.ts
sanbox/: novita.Dockerfile
sanbox/template-files/: .eslintrc.json  agent-runner.js  tsconfig.json
sandbox/: novita.Dockerfile  novita.toml
sandbox/coding-agent/: README.md  env.example  pyproject.toml  test_sse.py
sandbox/coding-agent/src/: main.py
sandbox/coding-agent/src/agent/: hooks.py  runner.py
sandbox/coding-agent/src/agent/prompts/: system_prompt.txt
sandbox/coding-agent/src/models/: events.py
test/: sandbox-generate.mjs
types/: index.ts
(+5 files in other folders)
