[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.11",
]
